test/parse/module/bad-export-no-string.txt
;;; ERROR: 1
(module (func (nop)) (export nop nop))
(;; STDERR ;;;
parse/module/bad-export-no-string.txt:2:30: syntax error, unexpected NOP, expecting TEXT
;;; STDERR ;;)
